--- a/starter/build.gradle
+++ b/starter/build.gradle
@@ -1,6 +1,26 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext {
+        agp_version = '8.0.1'
+        version_appcompat = "1.6.1"
+        version_constraint_layout = "2.1.4"
+        version_core = "1.10.1"
+        version_gradle = '8.1.0'
+        version_glide = "4.14.2"
+        version_kotlin = "1.9.0"
+        version_lifecycle = "2.6.1"
+        version_moshi = "1.13.0"
+        version_navigation = '2.7.0'
+        version_play_services = "21.0.1"
+        version_recyclerview = "1.3.1"
+        version_retrofit = "2.9.0"
+        version_retrofit_coroutines_adapter = "0.9.2"
+        version_room = "2.5.2"
+        version_work = "2.8.1"
+        version_timber = "4.7.1"
+    }
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.3.1' apply false
+    id 'com.android.application' version '8.0.1' apply false
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
 }
